# xdy

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  codebook.toml  justfile  rustfmt.toml
.beads/: metadata.json
.cargo/: mutants.toml
.github/workflows/: rust.yml
tree-sitter-xdy/: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-xdy/bindings/rust/: build.rs  lib.rs
tree-sitter-xdy/dice.dylib.dSYM/Contents/: Info.plist
tree-sitter-xdy/dice.dylib.dSYM/Contents/Resources/Relocations/aarch64/: dice.dylib.yml
tree-sitter-xdy/src/: grammar.json  node-types.json  parser.c
tree-sitter-xdy/test/corpus/: arithmetic.txt  bindings.txt  constants.txt  dice.txt  ranges.txt  variables.txt
xdy/: Cargo.toml  README.md  build.rs  justfile
xdy/benches/: benchmarks.rs
xdy/benches/reports/: comparison.md  nom-optimizations.txt  tree-sitter-optimizations.txt
xdy/grammar/: xdy.ebnf  xdy_asm.ebnf
xdy/src/: assembler.rs  ast.rs  codegen.rs  compiler.rs  diagnostics.rs  evaluator.rs  histogram.rs  ir.rs  lib.rs  optimizer.rs  parser.rs  primitives.rs  s_expr.rs  span.rs  support.rs  tests.rs  validator.rs
xdy/src/histogram/: parallel.rs  serial.rs
xdy/src/optimizer/: coalescence.rs  commutation.rs  cse.rs  dce.rs  folding.rs  reduction.rs
xdy/src/parser/: combinators.rs  errors.rs
xdy/src/tests/: assembler.rs  compiler.rs  diagnostics.rs  evaluator.rs  histogram.rs  optimizer.rs  parser.rs  validator.rs
xdy/src/tests/parser/: combinators_add_sub.rs  combinators_atoms.rs  combinators_dice.rs  combinators_expression.rs  combinators_function.rs  combinators_mul_div_mod.rs  combinators_primary.rs  data_driven.rs  internals.rs  s_expr_format.rs  s_expr_multiline.rs  s_expr_reader_errors.rs  s_expr_sizing.rs  spans.rs
xdy/tests/: test_common_subexpression_elimination.txt  test_compile_unoptimized.txt  test_constant_commuting.txt  test_constant_folding.txt  test_evaluation.txt  test_full_optimization.txt  test_histograms.txt  test_parse.txt  test_parser_errors.txt  test_register_coalescence.txt  test_strength_reduction.txt
