[workspace]
members = ["xdy", "tree-sitter-xdy"]
resolver = "2"

[workspace.package]
description = "Complex RPG dice expression evaluator with histogram support."
version = "0.10.0"
edition = "2024"
authors = ["Todd L Smith <todd@availlang.org>"]
license = "BSD-3-Clause"
keywords = ["dice", "rpg", "xdy", "parsing"]
categories = ["compilers", "parsing", "game-development", "mathematics"]
repository = "https://github.com/toddATavail/xdy"

[workspace.dependencies]
aquamarine = "0.6"
cc = "1.2.63"
criterion = { version = "0.8.2", features = ["html_reports"] }
ebnsf = "0.1"
nom = "8.0.0"
nom-language = "0.1.0"
nom_locate = "5.0.0"
pretty_assertions = "1.4.1"
rand = "0.10"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.26.9"
