[package]
name = "tree-sitter-xdy"
description = "tree-sitter grammar for xDy dice expression language."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["dice", "rpg", "xdy", "parsing", "tree-sitter"]
categories = { workspace = true }
repository = { workspace = true }
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { workspace = true }

[build-dependencies]
cc = { workspace = true }
