[package]
name = "xdy"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
rand = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-xdy = { path = "../tree-sitter-xdy" }

[dependencies.rayon]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["parallel-histogram", "serde"]
bench = []
parallel-histogram = ["dep:rayon"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
