[package]
name = "xdy"
description = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
nom = { workspace = true }
nom-language = { workspace = true }
nom_locate = { workspace = true }
rand = { workspace = true }

[dependencies.rayon]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["parallel-histogram", "serde"]
bench = []
parallel-histogram = ["dep:rayon"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
